Bug 381190 - Crash when clicking on "Color Space Browser" in "New" dialog
Summary: Crash when clicking on "Color Space Browser" in "New" dialog
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: General (other bugs)
Version First Reported In: 3.1.2
Platform: Compiled Sources Linux
: NOR crash
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords: drkonqi
Depends on:
Blocks:
 
Reported: 2017-06-14 07:41 UTC by Elias Probst
Modified: 2017-06-14 07:56 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Elias Probst 2017-06-14 07:41:18 UTC
Application: krita (3.1.2)
 (Compiled from sources)
Qt Version: 5.7.1
Frameworks Version: 5.35.0
Operating System: Linux 4.10.1-gentoo x86_64
Distribution: "Gentoo Base System release 2.3"

-- Information about the crash:
- What I was doing when the application crashed:

- Start Krita
- Open "New" dialog
- Click on "Color Space Browser"
- Krita crashes

The crash can be reproduced every time.

-- Backtrace:
Application: Krita (krita), signal: Segmentation fault
Using host libthread_db library "/lib64/libthread_db.so.1".
[Current thread is 1 (Thread 0x7f583b332800 (LWP 19059))]

Thread 6 (Thread 0x7f5827218700 (LWP 19060)):
#0  0x00007f5838899e6d in poll () at ../sysdeps/unix/syscall-template.S:84
#1  0x00007f583712a8f2 in poll (__timeout=-1, __nfds=1, __fds=0x7f5827217cc0) at /usr/include/bits/poll2.h:46
#2  _xcb_conn_wait (c=c@entry=0x21ccbc0, cond=cond@entry=0x21ccc00, vector=vector@entry=0x0, count=count@entry=0x0) at /var/tmp/portage/x11-libs/libxcb-1.12-r2/work/libxcb-1.12/src/xcb_conn.c:479
#3  0x00007f583712c6df in xcb_wait_for_event (c=0x21ccbc0) at /var/tmp/portage/x11-libs/libxcb-1.12-r2/work/libxcb-1.12/src/xcb_in.c:693
#4  0x00007f582956c2a9 in QXcbEventReader::run (this=0x21d7290) at qxcbconnection.cpp:1343
#5  0x00007f583921052c in QThreadPrivate::start (arg=0x21d7290) at thread/qthread_unix.cpp:368
#6  0x00007f5833773454 in start_thread (arg=0x7f5827218700) at pthread_create.c:333
#7  0x00007f58388a2f4d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 5 (Thread 0x7f581a8c6700 (LWP 19061)):
#0  0x00007f5838899e6d in poll () at ../sysdeps/unix/syscall-template.S:84
#1  0x00007f5831edc6fc in g_main_context_poll (priority=2147483647, n_fds=1, fds=0x7f5814018e00, timeout=-1, context=0x7f5814000990) at /var/tmp/portage/dev-libs/glib-2.50.3-r1/work/glib-2.50.3/glib/gmain.c:4228
#2  g_main_context_iterate (context=context@entry=0x7f5814000990, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>) at /var/tmp/portage/dev-libs/glib-2.50.3-r1/work/glib-2.50.3/glib/gmain.c:3924
#3  0x00007f5831edc80c in g_main_context_iteration (context=0x7f5814000990, may_block=may_block@entry=1) at /var/tmp/portage/dev-libs/glib-2.50.3-r1/work/glib-2.50.3/glib/gmain.c:3990
#4  0x00007f58393f36ab in QEventDispatcherGlib::processEvents (this=0x7f58140008c0, flags=...) at kernel/qeventdispatcher_glib.cpp:425
#5  0x00007f58393a538a in QEventLoop::exec (this=this@entry=0x7f581a8c5d90, flags=..., flags@entry=...) at kernel/qeventloop.cpp:212
#6  0x00007f583920c2e4 in QThread::exec (this=this@entry=0x7f583b4387c0 <(anonymous namespace)::Q_QGS__q_manager::innerFunction()::holder>) at thread/qthread.cpp:507
#7  0x00007f583b3c4835 in QDBusConnectionManager::run (this=0x7f583b4387c0 <(anonymous namespace)::Q_QGS__q_manager::innerFunction()::holder>) at qdbusconnection.cpp:178
#8  0x00007f583921052c in QThreadPrivate::start (arg=0x7f583b4387c0 <(anonymous namespace)::Q_QGS__q_manager::innerFunction()::holder>) at thread/qthread_unix.cpp:368
#9  0x00007f5833773454 in start_thread (arg=0x7f581a8c6700) at pthread_create.c:333
#10 0x00007f58388a2f4d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 4 (Thread 0x7f57f3b9d700 (LWP 19066)):
#0  pthread_cond_wait () at ../sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:185
#1  0x00007f5839210b9a in QWaitConditionPrivate::wait (time=18446744073709551615, this=0x86a5e70) at thread/qwaitcondition_unix.cpp:143
#2  QWaitCondition::wait (this=this@entry=0x869f7e8, mutex=mutex@entry=0x869f7e0, time=time@entry=18446744073709551615) at thread/qwaitcondition_unix.cpp:215
#3  0x00007f583920af7b in QSemaphore::acquire (this=this@entry=0x7f583710db50 <(anonymous namespace)::Q_QGS_s_instance::innerFunction()::holder+16>, n=n@entry=1) at thread/qsemaphore.cpp:143
#4  0x00007f5836c2a50e in KisTileDataPooler::waitForWork (this=0x7f583710db40 <(anonymous namespace)::Q_QGS_s_instance::innerFunction()::holder>) at /var/tmp/portage/media-gfx/krita-3.1.2-r2/work/krita-3.1.2.1/libs/image/tiles3/kis_tile_data_pooler.cc:165
#5  0x00007f5836c2af12 in KisTileDataPooler::run (this=0x7f583710db40 <(anonymous namespace)::Q_QGS_s_instance::innerFunction()::holder>) at /var/tmp/portage/media-gfx/krita-3.1.2-r2/work/krita-3.1.2.1/libs/image/tiles3/kis_tile_data_pooler.cc:187
#6  0x00007f583921052c in QThreadPrivate::start (arg=0x7f583710db40 <(anonymous namespace)::Q_QGS_s_instance::innerFunction()::holder>) at thread/qthread_unix.cpp:368
#7  0x00007f5833773454 in start_thread (arg=0x7f57f3b9d700) at pthread_create.c:333
#8  0x00007f58388a2f4d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 3 (Thread 0x7f57f339c700 (LWP 19067)):
#0  pthread_cond_wait () at ../sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:185
#1  0x00007f5839210b9a in QWaitConditionPrivate::wait (time=18446744073709551615, this=0x86a6150) at thread/qwaitcondition_unix.cpp:143
#2  QWaitCondition::wait (this=<optimized out>, mutex=mutex@entry=0x86a6130, time=time@entry=18446744073709551615) at thread/qwaitcondition_unix.cpp:215
#3  0x00007f583920b223 in QSemaphore::tryAcquire (this=0x86a5f10, n=n@entry=1, timeout=timeout@entry=-1) at thread/qsemaphore.cpp:220
#4  0x00007f5836c45f63 in KisTileDataSwapper::waitForWork (this=this@entry=0x7f583710db80 <(anonymous namespace)::Q_QGS_s_instance::innerFunction()::holder+64>) at /var/tmp/portage/media-gfx/krita-3.1.2-r2/work/krita-3.1.2.1/libs/image/tiles3/swap/kis_tile_data_swapper.cpp:86
#5  0x00007f5836c4615a in KisTileDataSwapper::run (this=0x7f583710db80 <(anonymous namespace)::Q_QGS_s_instance::innerFunction()::holder+64>) at /var/tmp/portage/media-gfx/krita-3.1.2-r2/work/krita-3.1.2.1/libs/image/tiles3/swap/kis_tile_data_swapper.cpp:92
#6  0x00007f583921052c in QThreadPrivate::start (arg=0x7f583710db80 <(anonymous namespace)::Q_QGS_s_instance::innerFunction()::holder+64>) at thread/qthread_unix.cpp:368
#7  0x00007f5833773454 in start_thread (arg=0x7f57f339c700) at pthread_create.c:333
#8  0x00007f58388a2f4d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 2 (Thread 0x7f57f2b9b700 (LWP 19068)):
#0  pthread_cond_wait () at ../sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:185
#1  0x00007f5839210b9a in QWaitConditionPrivate::wait (time=18446744073709551615, this=0x951e6e0) at thread/qwaitcondition_unix.cpp:143
#2  QWaitCondition::wait (this=this@entry=0x951e320, mutex=mutex@entry=0x951e318, time=time@entry=18446744073709551615) at thread/qwaitcondition_unix.cpp:215
#3  0x00007f5839e0a98a in QFileInfoGatherer::run (this=0x951e308) at dialogs/qfileinfogatherer.cpp:217
#4  0x00007f583921052c in QThreadPrivate::start (arg=0x951e308) at thread/qthread_unix.cpp:368
#5  0x00007f5833773454 in start_thread (arg=0x7f57f2b9b700) at pthread_create.c:333
#6  0x00007f58388a2f4d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 1 (Thread 0x7f583b332800 (LWP 19059)):
[KCrash Handler]
#6  0x00007f58355950ab in KoColorSpace::estimatedTRCXYY (this=0x804fab0) at /var/tmp/portage/media-gfx/krita-3.1.2-r2/work/krita-3.1.2.1/libs/pigment/KoColorSpace.cpp:199
#7  0x00007f583ad14c7f in KisAdvancedColorSpaceSelector::fillDescription (this=0x7880f70) at /var/tmp/portage/media-gfx/krita-3.1.2-r2/work/krita-3.1.2.1/libs/ui/widgets/kis_advanced_color_space_selector.cc:288
#8  0x00007f583aea3f15 in KisAdvancedColorSpaceSelector::qt_static_metacall (_o=0x7880f70, _c=<optimized out>, _id=<optimized out>, _a=0x7ffc98705750) at /var/tmp/portage/media-gfx/krita-3.1.2-r2/work/krita-3.1.2_build/libs/ui/kritaui_automoc.dir/moc_kis_advanced_c_DHZRXY7IBR7L4N.cpp:109
#9  0x00007f58393cc747 in QMetaObject::activate (sender=sender@entry=0x7880f70, signalOffset=<optimized out>, local_signal_index=local_signal_index@entry=0, argv=argv@entry=0x7ffc98705750) at kernel/qobject.cpp:3740
#10 0x00007f58393cd0c7 in QMetaObject::activate (sender=sender@entry=0x7880f70, m=m@entry=0x7f583b2c60a0 <KisAdvancedColorSpaceSelector::staticMetaObject>, local_signal_index=local_signal_index@entry=0, argv=argv@entry=0x7ffc98705750) at kernel/qobject.cpp:3602
#11 0x00007f583ae9bd9f in KisAdvancedColorSpaceSelector::selectionChanged (this=this@entry=0x7880f70, _t1=_t1@entry=true) at /var/tmp/portage/media-gfx/krita-3.1.2-r2/work/krita-3.1.2_build/libs/ui/kritaui_automoc.dir/moc_kis_advanced_c_DHZRXY7IBR7L4N.cpp:187
#12 0x00007f583ad0cd3b in KisAdvancedColorSpaceSelector::colorSpaceChanged (this=0x7880f70) at /var/tmp/portage/media-gfx/krita-3.1.2-r2/work/krita-3.1.2.1/libs/ui/widgets/kis_advanced_color_space_selector.cc:765
#13 0x00007f583ad0d528 in KisAdvancedColorSpaceSelector::fillLstProfiles (this=this@entry=0x7880f70) at /var/tmp/portage/media-gfx/krita-3.1.2-r2/work/krita-3.1.2.1/libs/ui/widgets/kis_advanced_color_space_selector.cc:122
#14 0x00007f583ad0e1fe in KisAdvancedColorSpaceSelector::KisAdvancedColorSpaceSelector (this=0x7880f70, parent=<optimized out>, caption=...) at /var/tmp/portage/media-gfx/krita-3.1.2-r2/work/krita-3.1.2.1/libs/ui/widgets/kis_advanced_color_space_selector.cc:87
#15 0x00007f583ad08f23 in KisColorSpaceSelector::slotOpenAdvancedSelector (this=0x9d1bd60) at /var/tmp/portage/media-gfx/krita-3.1.2-r2/work/krita-3.1.2.1/libs/ui/widgets/kis_color_space_selector.cc:251
#16 0x00007f58393cc747 in QMetaObject::activate (sender=sender@entry=0x9d1e6b0, signalOffset=<optimized out>, local_signal_index=local_signal_index@entry=2, argv=argv@entry=0x7ffc98705b90) at kernel/qobject.cpp:3740
#17 0x00007f58393cd0c7 in QMetaObject::activate (sender=sender@entry=0x9d1e6b0, m=m@entry=0x7f583a0d85e0 <QAbstractButton::staticMetaObject>, local_signal_index=local_signal_index@entry=2, argv=argv@entry=0x7ffc98705b90) at kernel/qobject.cpp:3602
#18 0x00007f5839cc9be2 in QAbstractButton::clicked (this=this@entry=0x9d1e6b0, _t1=false) at .moc/moc_qabstractbutton.cpp:307
#19 0x00007f5839cc9e35 in QAbstractButtonPrivate::emitClicked (this=this@entry=0x9d1e6f0) at widgets/qabstractbutton.cpp:411
#20 0x00007f5839ccb464 in QAbstractButtonPrivate::click (this=this@entry=0x9d1e6f0) at widgets/qabstractbutton.cpp:404
#21 0x00007f5839ccb624 in QAbstractButton::mouseReleaseEvent (this=0x9d1e6b0, e=0x7ffc987060f0) at widgets/qabstractbutton.cpp:1009
#22 0x00007f5839c28aa8 in QWidget::event (this=0x9d1e6b0, event=0x7ffc987060f0) at kernel/qwidget.cpp:9161
#23 0x00007f5839bdfdfc in QApplicationPrivate::notify_helper (this=<optimized out>, receiver=0x9d1e6b0, e=0x7ffc987060f0) at kernel/qapplication.cpp:3799
#24 0x00007f5839be7c43 in QApplication::notify (this=<optimized out>, receiver=receiver@entry=0x9d1e6b0, e=e@entry=0x7ffc987060f0) at kernel/qapplication.cpp:3273
#25 0x00007f583adde457 in KisApplication::notify (this=<optimized out>, receiver=0x9d1e6b0, event=0x7ffc987060f0) at /var/tmp/portage/media-gfx/krita-3.1.2-r2/work/krita-3.1.2.1/libs/ui/KisApplication.cpp:538
#26 0x00007f58393a63ca in QCoreApplication::notifyInternal2 (receiver=receiver@entry=0x9d1e6b0, event=event@entry=0x7ffc987060f0) at kernel/qcoreapplication.cpp:988
#27 0x00007f5839be6831 in QCoreApplication::sendEvent (event=<optimized out>, receiver=<optimized out>) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:231
#28 QApplicationPrivate::sendMouseEvent (receiver=receiver@entry=0x9d1e6b0, event=event@entry=0x7ffc987060f0, alienWidget=alienWidget@entry=0x9d1e6b0, nativeWidget=0x26566e0, buttonDown=buttonDown@entry=0x7f583a102620 <qt_button_down>, lastMouseReceiver=..., spontaneous=true) at kernel/qapplication.cpp:2771
#29 0x00007f5839c44f2b in QWidgetWindow::handleMouseEvent (this=this@entry=0x9e41430, event=event@entry=0x7ffc98706580) at kernel/qwidgetwindow.cpp:617
#30 0x00007f5839c475a3 in QWidgetWindow::event (this=0x9e41430, event=0x7ffc98706580) at kernel/qwidgetwindow.cpp:239
#31 0x00007f5839bdfdfc in QApplicationPrivate::notify_helper (this=<optimized out>, receiver=0x9e41430, e=0x7ffc98706580) at kernel/qapplication.cpp:3799
#32 0x00007f5839be72e0 in QApplication::notify (this=0x7ffc98708040, receiver=receiver@entry=0x9e41430, e=e@entry=0x7ffc98706580) at kernel/qapplication.cpp:3556
#33 0x00007f583adde457 in KisApplication::notify (this=<optimized out>, receiver=0x9e41430, event=0x7ffc98706580) at /var/tmp/portage/media-gfx/krita-3.1.2-r2/work/krita-3.1.2.1/libs/ui/KisApplication.cpp:538
#34 0x00007f58393a63ca in QCoreApplication::notifyInternal2 (receiver=receiver@entry=0x9e41430, event=event@entry=0x7ffc98706580) at kernel/qcoreapplication.cpp:988
#35 0x00007f58396d45f5 in QCoreApplication::sendSpontaneousEvent (event=0x7ffc98706580, receiver=0x9e41430) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:234
#36 QGuiApplicationPrivate::processMouseEvent (e=0x9e66e30) at kernel/qguiapplication.cpp:1903
#37 0x00007f58396d6565 in QGuiApplicationPrivate::processWindowSystemEvent (e=e@entry=0x9e66e30) at kernel/qguiapplication.cpp:1687
#38 0x00007f58396b71c3 in QWindowSystemInterface::sendWindowSystemEvents (flags=...) at kernel/qwindowsysteminterface.cpp:659
#39 0x00007f582959bf90 in userEventSourceDispatch (source=<optimized out>) at eventdispatchers/qeventdispatcher_glib.cpp:76
#40 0x00007f5831edc47d in g_main_dispatch (context=0x7f58200016f0) at /var/tmp/portage/dev-libs/glib-2.50.3-r1/work/glib-2.50.3/glib/gmain.c:3203
#41 g_main_context_dispatch (context=context@entry=0x7f58200016f0) at /var/tmp/portage/dev-libs/glib-2.50.3-r1/work/glib-2.50.3/glib/gmain.c:3856
#42 0x00007f5831edc760 in g_main_context_iterate (context=context@entry=0x7f58200016f0, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>) at /var/tmp/portage/dev-libs/glib-2.50.3-r1/work/glib-2.50.3/glib/gmain.c:3929
#43 0x00007f5831edc80c in g_main_context_iteration (context=0x7f58200016f0, may_block=may_block@entry=1) at /var/tmp/portage/dev-libs/glib-2.50.3-r1/work/glib-2.50.3/glib/gmain.c:3990
#44 0x00007f58393f368f in QEventDispatcherGlib::processEvents (this=0x222bb90, flags=...) at kernel/qeventdispatcher_glib.cpp:423
#45 0x00007f58393a538a in QEventLoop::exec (this=this@entry=0x7ffc98706930, flags=..., flags@entry=...) at kernel/qeventloop.cpp:212
#46 0x00007f5839dd3977 in QDialog::exec (this=0x26566e0) at dialogs/qdialog.cpp:552
#47 0x00007f583ae0cb7c in KisMainWindow::slotFileNew (this=<optimized out>) at /var/tmp/portage/media-gfx/krita-3.1.2-r2/work/krita-3.1.2.1/libs/ui/KisMainWindow.cpp:1367
#48 0x00007f583ae1d911 in KisMainWindow::qt_static_metacall (_o=0x8060f70, _c=<optimized out>, _id=<optimized out>, _a=0x7ffc98706d00) at /var/tmp/portage/media-gfx/krita-3.1.2-r2/work/krita-3.1.2_build/libs/ui/moc_KisMainWindow.cpp:314
#49 0x00007f58393cc747 in QMetaObject::activate (sender=sender@entry=0x97079e0, signalOffset=<optimized out>, local_signal_index=local_signal_index@entry=1, argv=argv@entry=0x7ffc98706d00) at kernel/qobject.cpp:3740
#50 0x00007f58393cd0c7 in QMetaObject::activate (sender=sender@entry=0x97079e0, m=m@entry=0x7f583a0d3780 <QAction::staticMetaObject>, local_signal_index=local_signal_index@entry=1, argv=argv@entry=0x7ffc98706d00) at kernel/qobject.cpp:3602
#51 0x00007f5839bd8c02 in QAction::triggered (this=this@entry=0x97079e0, _t1=false) at .moc/moc_qaction.cpp:369
#52 0x00007f5839bdb82d in QAction::activate (this=this@entry=0x97079e0, event=event@entry=QAction::Trigger) at kernel/qaction.cpp:1170
#53 0x00007f5839d4f432 in QMenuPrivate::activateCausedStack (this=this@entry=0x98ba2e0, causedStack=..., action=action@entry=0x97079e0, action_e=action_e@entry=QAction::Trigger, self=self@entry=true) at widgets/qmenu.cpp:1140
#54 0x00007f5839d55b67 in QMenuPrivate::activateAction (this=this@entry=0x98ba2e0, action=action@entry=0x97079e0, action_e=action_e@entry=QAction::Trigger, self=self@entry=true) at widgets/qmenu.cpp:1217
#55 0x00007f5839d56af2 in QMenu::mouseReleaseEvent (this=<optimized out>, e=0x7ffc987073f0) at widgets/qmenu.cpp:2680
#56 0x00007f5839c28aa8 in QWidget::event (this=this@entry=0x98ba1d0, event=event@entry=0x7ffc987073f0) at kernel/qwidget.cpp:9161
#57 0x00007f5839d58dc3 in QMenu::event (this=0x98ba1d0, e=0x7ffc987073f0) at widgets/qmenu.cpp:2799
#58 0x00007f5839bdfdfc in QApplicationPrivate::notify_helper (this=<optimized out>, receiver=0x98ba1d0, e=0x7ffc987073f0) at kernel/qapplication.cpp:3799
#59 0x00007f5839be7c43 in QApplication::notify (this=<optimized out>, receiver=receiver@entry=0x98ba1d0, e=e@entry=0x7ffc987073f0) at kernel/qapplication.cpp:3273
#60 0x00007f583adde457 in KisApplication::notify (this=<optimized out>, receiver=0x98ba1d0, event=0x7ffc987073f0) at /var/tmp/portage/media-gfx/krita-3.1.2-r2/work/krita-3.1.2.1/libs/ui/KisApplication.cpp:538
#61 0x00007f58393a63ca in QCoreApplication::notifyInternal2 (receiver=receiver@entry=0x98ba1d0, event=event@entry=0x7ffc987073f0) at kernel/qcoreapplication.cpp:988
#62 0x00007f5839be6831 in QCoreApplication::sendEvent (event=<optimized out>, receiver=<optimized out>) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:231
#63 QApplicationPrivate::sendMouseEvent (receiver=receiver@entry=0x98ba1d0, event=event@entry=0x7ffc987073f0, alienWidget=0x0, alienWidget@entry=0x98ba1d0, nativeWidget=0x98ba1d0, buttonDown=buttonDown@entry=0x7f583a102620 <qt_button_down>, lastMouseReceiver=..., spontaneous=true) at kernel/qapplication.cpp:2771
#64 0x00007f5839c44c45 in QWidgetWindow::handleMouseEvent (this=this@entry=0x9711730, event=event@entry=0x7ffc98707880) at kernel/qwidgetwindow.cpp:511
#65 0x00007f5839c475a3 in QWidgetWindow::event (this=0x9711730, event=0x7ffc98707880) at kernel/qwidgetwindow.cpp:239
#66 0x00007f5839bdfdfc in QApplicationPrivate::notify_helper (this=<optimized out>, receiver=0x9711730, e=0x7ffc98707880) at kernel/qapplication.cpp:3799
#67 0x00007f5839be72e0 in QApplication::notify (this=0x7ffc98708040, receiver=receiver@entry=0x9711730, e=e@entry=0x7ffc98707880) at kernel/qapplication.cpp:3556
#68 0x00007f583adde457 in KisApplication::notify (this=<optimized out>, receiver=0x9711730, event=0x7ffc98707880) at /var/tmp/portage/media-gfx/krita-3.1.2-r2/work/krita-3.1.2.1/libs/ui/KisApplication.cpp:538
#69 0x00007f58393a63ca in QCoreApplication::notifyInternal2 (receiver=receiver@entry=0x9711730, event=event@entry=0x7ffc98707880) at kernel/qcoreapplication.cpp:988
#70 0x00007f58396d45f5 in QCoreApplication::sendSpontaneousEvent (event=0x7ffc98707880, receiver=0x9711730) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:234
#71 QGuiApplicationPrivate::processMouseEvent (e=0x964e380) at kernel/qguiapplication.cpp:1903
#72 0x00007f58396d6565 in QGuiApplicationPrivate::processWindowSystemEvent (e=e@entry=0x964e380) at kernel/qguiapplication.cpp:1687
#73 0x00007f58396b71c3 in QWindowSystemInterface::sendWindowSystemEvents (flags=...) at kernel/qwindowsysteminterface.cpp:659
#74 0x00007f582959bf90 in userEventSourceDispatch (source=<optimized out>) at eventdispatchers/qeventdispatcher_glib.cpp:76
#75 0x00007f5831edc47d in g_main_dispatch (context=0x7f58200016f0) at /var/tmp/portage/dev-libs/glib-2.50.3-r1/work/glib-2.50.3/glib/gmain.c:3203
#76 g_main_context_dispatch (context=context@entry=0x7f58200016f0) at /var/tmp/portage/dev-libs/glib-2.50.3-r1/work/glib-2.50.3/glib/gmain.c:3856
#77 0x00007f5831edc760 in g_main_context_iterate (context=context@entry=0x7f58200016f0, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>) at /var/tmp/portage/dev-libs/glib-2.50.3-r1/work/glib-2.50.3/glib/gmain.c:3929
#78 0x00007f5831edc80c in g_main_context_iteration (context=0x7f58200016f0, may_block=may_block@entry=1) at /var/tmp/portage/dev-libs/glib-2.50.3-r1/work/glib-2.50.3/glib/gmain.c:3990
#79 0x00007f58393f368f in QEventDispatcherGlib::processEvents (this=0x222bb90, flags=...) at kernel/qeventdispatcher_glib.cpp:423
#80 0x00007f58393a538a in QEventLoop::exec (this=this@entry=0x7ffc98707c30, flags=..., flags@entry=...) at kernel/qeventloop.cpp:212
#81 0x00007f58393acd8c in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1261
#82 0x00007f58396cc11c in QGuiApplication::exec () at kernel/qguiapplication.cpp:1633
#83 0x00007f5839bdfd55 in QApplication::exec () at kernel/qapplication.cpp:2975
#84 0x0000000000405088 in main (argc=1, argv=<optimized out>) at /var/tmp/portage/media-gfx/krita-3.1.2-r2/work/krita-3.1.2.1/krita/main.cc:258

Reported using DrKonqi
Comment 1 Halla Rempt 2017-06-14 07:51:06 UTC
Hi Elias,

I guess I know why this is... You've probably built Krita without openexr. Let me try to find a way to fix this.
Comment 2 Halla Rempt 2017-06-14 07:56:40 UTC
Git commit ea1647b76e3a783fd3cdc6501353c38b881bb5c6 by Boudewijn Rempt.
Committed on 14/06/2017 at 07:56.
Pushed by rempt into branch 'master'.

Don't crash on TCXYY calculations if Krita was built without openexr

We cannot use F16 colorspaces unless we know krita has been built
with openexr, so use F32 instead, which is always present.

A  +4625 -0    krita/data/symbols/pepper_carrot_speech_bubbles_backup.svg
M  +2    -2    libs/pigment/KoColorSpace.cpp

https://commits.kde.org/krita/ea1647b76e3a783fd3cdc6501353c38b881bb5c6
Comment 3 Halla Rempt 2017-06-14 07:56:53 UTC
Git commit 8bb19c8b0c1756a24a63d741256d7294fcfcecec by Boudewijn Rempt.
Committed on 14/06/2017 at 07:56.
Pushed by rempt into branch 'krita/3.2'.

Don't crash on TCXYY calculations if Krita was built without openexr

We cannot use F16 colorspaces unless we know krita has been built
with openexr, so use F32 instead, which is always present.

M  +7    -7    libs/pigment/KoColorSpace.cpp

https://commits.kde.org/krita/8bb19c8b0c1756a24a63d741256d7294fcfcecec