Don't crash on TCXYY calculations if Krita was built without openexr

We cannot use F16 colorspaces unless we know krita has been built
with openexr, so use F32 instead, which is always present.

BUG:381190